# agent-scope-diff

./: CONTRIBUTING.md  LICENSE  README.md  RELEASE.md  RELEASE_NOTES.md  SECURITY.md  pyproject.toml
.github/: dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml  publish.yml
fixtures/: mcp-after.yaml  mcp-before.yaml  simple-after.json  simple-before.json
scripts/: check-version.py  release-check.sh
src/agent_scope_diff/: __init__.py  baseline.py  cli.py  compare_dir.py  diff.py  models.py  normalize.py  parser.py  render.py  severity.py
tests/: __init__.py  test_diff.py  test_normalize.py  test_parser.py  test_render.py  test_roadmap_features.py
